--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.9"
 FlightRadarAPI = "^1.2.1"
 dash = "^2.6.1"
 pandas = "^1.4.3"
+gunicorn = "^20.1.0"
 
 [tool.poetry.dev-dependencies]
 black = "^22.6.0"
