--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ FlightRadarAPI = "^1.2.1"
 dash = "^2.6.1"
 pandas = "^1.4.3"
 gunicorn = "^20.1.0"
+Flask = "^2.2.2"
 
 [tool.poetry.dev-dependencies]
 black = "^22.6.0"
