--- a/na_visualize/static/manifest.json
+++ b/na_visualize/static/manifest.json
@@ -8,6 +8,6 @@
     }
   ],
   "background_color": "#ffffff",
-  "theme_color": "darkred",
+  "theme_color": "#ffffff",
   "display": "fullscreen"
 }
